src/parser/AprendizagemParser.java
// Generated from C:/Users/GL502V/Documents/Univ/Mestrado/GA/Projeto/src\Aprendizagem.g4 by ANTLR 4.9
package parser;

    import aprendizagem.*;
    import java.util.ArrayList;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class AprendizagemParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		RECURSOS=1, ALUNOS=2, LONG=3, MEDIUM=4, SHORT=5, ALUNOID=6, QUESTION=7, 
		FIND=8, TOTEACH=9, TO=10, WITH=11, NUM=12, TEXT=13, SETA=14, BARRA=15, 
		VIR=16, PVIR=17, PTO=18, LEFTCURL=19, RIGHTCURL=20, LEFTPAREN=21, RIGHTPAREN=22, 
		LEFTSTRAIGHT=23, RIGHTSTRAIGHT=24, RANGE=25, WS=26;
	public static final int
		RULE_aprendizagem = 0, RULE_recursos = 1, RULE_recursol = 2, RULE_recurso = 3, 
		RULE_id = 4, RULE_desc = 5, RULE_atributos = 6, RULE_idade_range = 7, 
		RULE_interacao = 8, RULE_tempo = 9, RULE_lista_emocional = 10, RULE_emocaol = 11, 
		RULE_emocao = 12, RULE_quadrante = 13, RULE_x = 14, RULE_y = 15, RULE_cprogs = 16, 
		RULE_cprogl = 17, RULE_cprog = 18, RULE_alunos = 19, RULE_aluno = 20, 
		RULE_idade = 21, RULE_personalidade = 22, RULE_queries = 23, RULE_querie = 24, 
		RULE_recursoquerie = 25, RULE_tipos = 26, RULE_tipo = 27, RULE_recursotarget = 28, 
		RULE_alunotarget = 29;
	private static String[] makeRuleNames() {
		return new String[] {
			"aprendizagem", "recursos", "recursol", "recurso", "id", "desc", "atributos", 
			"idade_range", "interacao", "tempo", "lista_emocional", "emocaol", "emocao", 
			"quadrante", "x", "y", "cprogs", "cprogl", "cprog", "alunos", "aluno", 
			"idade", "personalidade", "queries", "querie", "recursoquerie", "tipos", 
			"tipo", "recursotarget", "alunotarget"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, "'ALUNOS'", null, null, null, null, "'?'", null, "'TOTEACH'", 
			"'TO'", "'WITH'", null, null, "'->'", "'|'", "','", "';'", "'.'", "'{'", 
			"'}'", "'('", "')'", "'['", "']'", "'..'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "RECURSOS", "ALUNOS", "LONG", "MEDIUM", "SHORT", "ALUNOID", "QUESTION", 
			"FIND", "TOTEACH", "TO", "WITH", "NUM", "TEXT", "SETA", "BARRA", "VIR", 
			"PVIR", "PTO", "LEFTCURL", "RIGHTCURL", "LEFTPAREN", "RIGHTPAREN", "LEFTSTRAIGHT", 
			"RIGHTSTRAIGHT", "RANGE", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Aprendizagem.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public AprendizagemParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class AprendizagemContext extends ParserRuleContext {
		public RecursosContext recursos;
		public AlunosContext alunos;
		public TerminalNode RECURSOS() { return getToken(AprendizagemParser.RECURSOS, 0); }
		public List<TerminalNode> LEFTCURL() { return getTokens(AprendizagemParser.LEFTCURL); }
		public TerminalNode LEFTCURL(int i) {
			return getToken(AprendizagemParser.LEFTCURL, i);
		}
		public RecursosContext recursos() {
			return getRuleContext(RecursosContext.class,0);
		}
		public List<TerminalNode> RIGHTCURL() { return getTokens(AprendizagemParser.RIGHTCURL); }
		public TerminalNode RIGHTCURL(int i) {
			return getToken(AprendizagemParser.RIGHTCURL, i);
		}
		public TerminalNode ALUNOS() { return getToken(AprendizagemParser.ALUNOS, 0); }
		public AlunosContext alunos() {
			return getRuleContext(AlunosContext.class,0);
		}
		public QueriesContext queries() {
			return getRuleContext(QueriesContext.class,0);
		}
		public AprendizagemContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_aprendizagem; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AprendizagemListener ) ((AprendizagemListener)listener).enterAprendizagem(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AprendizagemListener ) ((AprendizagemListener)listener).exitAprendizagem(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AprendizagemVisitor ) return ((AprendizagemVisitor<? extends T>)visitor).visitAprendizagem(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AprendizagemContext aprendizagem() throws RecognitionException {
		AprendizagemContext _localctx = new AprendizagemContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_aprendizagem);
		try {
			enterOuterAlt(_localctx, 1);
			{
			 Database data = new Database(); 
			setState(61);
			match(RECURSOS);
			setState(62);
			match(LEFTCURL);
			setState(63);
			((AprendizagemContext)_localctx).recursos = recursos();
			setState(64);
			match(RIGHTCURL);
			 data.setRecursos(((AprendizagemContext)_localctx).recursos.lista); 
			setState(66);
			match(ALUNOS);
			setState(67);
			match(LEFTCURL);
			setState(68);
			((AprendizagemContext)_localctx).alunos = alunos();
			setState(69);
			match(RIGHTCURL);
			 data.setAlunos(((AprendizagemContext)_localctx).alunos.lista); 
			setState(71);
			queries(data);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RecursosContext extends ParserRuleContext {
		public ArrayList<Recurso> lista;
		public List<RecursolContext> recursol() {
			return getRuleContexts(RecursolContext.class);
		}
		public RecursolContext recursol(int i) {
			return getRuleContext(RecursolContext.class,i);
		}
		public List<TerminalNode> PVIR() { return getTokens(AprendizagemParser.PVIR); }
		public TerminalNode PVIR(int i) {
			return getToken(AprendizagemParser.PVIR, i);
		}
		public RecursosContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_recursos; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AprendizagemListener ) ((AprendizagemListener)listener).enterRecursos(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AprendizagemListener ) ((AprendizagemListener)listener).exitRecursos(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AprendizagemVisitor ) return ((AprendizagemVisitor<? extends T>)visitor).visitRecursos(this);
			else return visitor.visitChildren(this);
		}
	}

	public final RecursosContext recursos() throws RecognitionException {
		RecursosContext _localctx = new RecursosContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_recursos);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			 ((RecursosContext)_localctx).lista =  new ArrayList<>(); 
			setState(74);
			recursol(_localctx.lista);
			setState(79);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(75);
					match(PVIR);
					setState(76);
					recursol(_localctx.lista);
					}
					} 
				}
				setState(81);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			}
			setState(82);
			match(PVIR);
			 System.out.println(_localctx.lista); 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RecursolContext extends ParserRuleContext {
		public ArrayList<Recurso> lista;
		public IdContext id;
		public DescContext desc;
		public TipoContext tipo;
		public AtributosContext atributos;
		public IdContext id() {
			return getRuleContext(IdContext.class,0);
		}
		public List<TerminalNode> VIR() { return getTokens(AprendizagemParser.VIR); }
		public TerminalNode VIR(int i) {
			return getToken(AprendizagemParser.VIR, i);
		}
		public DescContext desc() {
			return getRuleContext(DescContext.class,0);
		}
		public TipoContext tipo() {
			return getRuleContext(TipoContext.class,0);
		}
		public AtributosContext atributos() {
			return getRuleContext(AtributosContext.class,0);
		}
		public RecursolContext(ParserRuleContext parent, int invokingState) { super(parent, invokingState); }
		public RecursolContext(ParserRuleContext parent, int invokingState, ArrayList<Recurso> lista) {
			super(parent, invokingState);
			this.lista = lista;
		}
		@Override public int getRuleIndex() { return RULE_recursol; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AprendizagemListener ) ((AprendizagemListener)listener).enterRecursol(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AprendizagemListener ) ((AprendizagemListener)listener).exitRecursol(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AprendizagemVisitor ) return ((AprendizagemVisitor<? extends T>)visitor).visitRecursol(this);
			else return visitor.visitChildren(this);
		}
	}

	public final RecursolContext recursol(ArrayList<Recurso> lista) throws RecognitionException {
		RecursolContext _localctx = new RecursolContext(_ctx, getState(), lista);
		enterRule(_localctx, 4, RULE_recursol);
		try {
			enterOuterAlt(_localctx, 1);
			{
			 Recurso rec = new Recurso(); 
			setState(86);
			((RecursolContext)_localctx).id = id();
			setState(87);
			match(VIR);
			 rec.setId(Integer.parseInt((((RecursolContext)_localctx).id!=null?_input.getText(((RecursolContext)_localctx).id.start,((RecursolContext)_localctx).id.stop):null))); 
			setState(89);
			((RecursolContext)_localctx).desc = desc();
			setState(90);
			match(VIR);
			 rec.setDesc((((RecursolContext)_localctx).desc!=null?_input.getText(((RecursolContext)_localctx).desc.start,((RecursolContext)_localctx).desc.stop):null)); 
			setState(92);
			((RecursolContext)_localctx).tipo = tipo();
			setState(93);
			match(VIR);
			 rec.setTipo((((RecursolContext)_localctx).tipo!=null?_input.getText(((RecursolContext)_localctx).tipo.start,((RecursolContext)_localctx).tipo.stop):null)); 
			setState(95);
			((RecursolContext)_localctx).atributos = atributos();
			 rec.setAtributos(((RecursolContext)_localctx).atributos.atr); lista.add(rec); 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RecursoContext extends ParserRuleContext {
		public Recurso rec;
		public IdContext id;
		public DescContext desc;
		public TipoContext tipo;
		public AtributosContext atributos;
		public IdContext id() {
			return getRuleContext(IdContext.class,0);
		}
		public List<TerminalNode> VIR() { return getTokens(AprendizagemParser.VIR); }
		public TerminalNode VIR(int i) {
			return getToken(AprendizagemParser.VIR, i);
		}
		public DescContext desc() {
			return getRuleContext(DescContext.class,0);
		}
		public TipoContext tipo() {
			return getRuleContext(TipoContext.class,0);
		}
		public AtributosContext atributos() {
			return getRuleContext(AtributosContext.class,0);
		}
		public RecursoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_recurso; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AprendizagemListener ) ((AprendizagemListener)listener).enterRecurso(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AprendizagemListener ) ((AprendizagemListener)listener).exitRecurso(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AprendizagemVisitor ) return ((AprendizagemVisitor<? extends T>)visitor).visitRecurso(this);
			else return visitor.visitChildren(this);
		}
	}

	public final RecursoContext recurso() throws RecognitionException {
		RecursoContext _localctx = new RecursoContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_recurso);
		try {
			enterOuterAlt(_localctx, 1);
			{
			 ((RecursoContext)_localctx).rec =  new Recurso(); 
			setState(99);
			((RecursoContext)_localctx).id = id();
			setState(100);
			match(VIR);
			 _localctx.rec.setId(Integer.parseInt((((RecursoContext)_localctx).id!=null?_input.getText(((RecursoContext)_localctx).id.start,((RecursoContext)_localctx).id.stop):null))); 
			setState(102);
			((RecursoContext)_localctx).desc = desc();
			setState(103);
			match(VIR);
			 _localctx.rec.setDesc((((RecursoContext)_localctx).desc!=null?_input.getText(((RecursoContext)_localctx).desc.start,((RecursoContext)_localctx).desc.stop):null)); 
			setState(105);
			((RecursoContext)_localctx).tipo = tipo();
			setState(106);
			match(VIR);
			 _localctx.rec.setTipo((((RecursoContext)_localctx).tipo!=null?_input.getText(((RecursoContext)_localctx).tipo.start,((RecursoContext)_localctx).tipo.stop):null)); 
			setState(108);
			((RecursoContext)_localctx).atributos = atributos();
			 _localctx.rec.setAtributos(((RecursoContext)_localctx).atributos.atr); System.out.println(_localctx.rec.toString()); 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class IdContext extends ParserRuleContext {
		public TerminalNode NUM() { return getToken(AprendizagemParser.NUM, 0); }
		public IdContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_id; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AprendizagemListener ) ((AprendizagemListener)listener).enterId(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AprendizagemListener ) ((AprendizagemListener)listener).exitId(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AprendizagemVisitor ) return ((AprendizagemVisitor<? extends T>)visitor).visitId(this);
			else return visitor.visitChildren(this);
		}
	}

	public final IdContext id() throws RecognitionException {
		IdContext _localctx = new IdContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_id);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(111);
			match(NUM);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DescContext extends ParserRuleContext {
		public TerminalNode TEXT() { return getToken(AprendizagemParser.TEXT, 0); }
		public DescContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_desc; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AprendizagemListener ) ((AprendizagemListener)listener).enterDesc(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AprendizagemListener ) ((AprendizagemListener)listener).exitDesc(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AprendizagemVisitor ) return ((AprendizagemVisitor<? extends T>)visitor).visitDesc(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DescContext desc() throws RecognitionException {
		DescContext _localctx = new DescContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_desc);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(113);
			match(TEXT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AtributosContext extends ParserRuleContext {
		public Atributos atr;
		public Idade_rangeContext idade_range;
		public InteracaoContext interacao;
		public TempoContext tempo;
		public Lista_emocionalContext lista_emocional;
		public CprogsContext cprogs;
		public TerminalNode LEFTPAREN() { return getToken(AprendizagemParser.LEFTPAREN, 0); }
		public Idade_rangeContext idade_range() {
			return getRuleContext(Idade_rangeContext.class,0);
		}
		public List<TerminalNode> VIR() { return getTokens(AprendizagemParser.VIR); }
		public TerminalNode VIR(int i) {
			return getToken(AprendizagemParser.VIR, i);
		}
		public InteracaoContext interacao() {
			return getRuleContext(InteracaoContext.class,0);
		}
		public TempoContext tempo() {
			return getRuleContext(TempoContext.class,0);
		}
		public Lista_emocionalContext lista_emocional() {
			return getRuleContext(Lista_emocionalContext.class,0);
		}
		public CprogsContext cprogs() {
			return getRuleContext(CprogsContext.class,0);
		}
		public TerminalNode RIGHTPAREN() { return getToken(AprendizagemParser.RIGHTPAREN, 0); }
		public AtributosContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_atributos; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AprendizagemListener ) ((AprendizagemListener)listener).enterAtributos(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AprendizagemListener ) ((AprendizagemListener)listener).exitAtributos(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AprendizagemVisitor ) return ((AprendizagemVisitor<? extends T>)visitor).visitAtributos(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AtributosContext atributos() throws RecognitionException {
		AtributosContext _localctx = new AtributosContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_atributos);
		try {
			enterOuterAlt(_localctx, 1);
			{
			 ((AtributosContext)_localctx).atr =  new Atributos(); 
			setState(116);
			match(LEFTPAREN);
			setState(117);
			((AtributosContext)_localctx).idade_range = idade_range();
			setState(118);
			match(VIR);
			 _localctx.atr.setIdadeMin(((AtributosContext)_localctx).idade_range.min); _localctx.atr.setIdadeMax(((AtributosContext)_localctx).idade_range.max); 
			setState(120);
			((AtributosContext)_localctx).interacao = interacao();
			setState(121);
			match(VIR);
			 _localctx.atr.setInteracao(Integer.parseInt((((AtributosContext)_localctx).interacao!=null?_input.getText(((AtributosContext)_localctx).interacao.start,((AtributosContext)_localctx).interacao.stop):null))); 
			setState(123);
			((AtributosContext)_localctx).tempo = tempo();
			setState(124);
			match(VIR);
			 _localctx.atr.setTempo((((AtributosContext)_localctx).tempo!=null?_input.getText(((AtributosContext)_localctx).tempo.start,((AtributosContext)_localctx).tempo.stop):null).charAt(0)); 
			setState(126);
			((AtributosContext)_localctx).lista_emocional = lista_emocional();
			setState(127);
			match(VIR);
			 for(Emocao e : ((AtributosContext)_localctx).lista_emocional.lista){ _localctx.atr.addEmocao(e); } 
			setState(129);
			((AtributosContext)_localctx).cprogs = cprogs();
			 for(String cp : ((AtributosContext)_localctx).cprogs.lista){ _localctx.atr.addCprog(cp); } 
			setState(131);
			match(RIGHTPAREN);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Idade_rangeContext extends ParserRuleContext {
		public int min;
		public int max;
		public Token NUM;
		public List<TerminalNode> NUM() { return getTokens(AprendizagemParser.NUM); }
		public TerminalNode NUM(int i) {
			return getToken(AprendizagemParser.NUM, i);
		}
		public TerminalNode RANGE() { return getToken(AprendizagemParser.RANGE, 0); }
		public Idade_rangeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_idade_range; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AprendizagemListener ) ((AprendizagemListener)listener).enterIdade_range(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AprendizagemListener ) ((AprendizagemListener)listener).exitIdade_range(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AprendizagemVisitor ) return ((AprendizagemVisitor<? extends T>)visitor).visitIdade_range(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Idade_rangeContext idade_range() throws RecognitionException {
		Idade_rangeContext _localctx = new Idade_rangeContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_idade_range);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(133);
			((Idade_rangeContext)_localctx).NUM = match(NUM);
			 ((Idade_rangeContext)_localctx).max =  (((Idade_rangeContext)_localctx).NUM!=null?Integer.valueOf(((Idade_rangeContext)_localctx).NUM.getText()):0); 
			setState(135);
			match(RANGE);
			setState(136);
			((Idade_rangeContext)_localctx).NUM = match(NUM);
			 ((Idade_rangeContext)_localctx).min =  (((Idade_rangeContext)_localctx).NUM!=null?Integer.valueOf(((Idade_rangeContext)_localctx).NUM.getText()):0); 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class InteracaoContext extends ParserRuleContext {
		public TerminalNode NUM() { return getToken(AprendizagemParser.NUM, 0); }
		public InteracaoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_interacao; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AprendizagemListener ) ((AprendizagemListener)listener).enterInteracao(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AprendizagemListener ) ((AprendizagemListener)listener).exitInteracao(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AprendizagemVisitor ) return ((AprendizagemVisitor<? extends T>)visitor).visitInteracao(this);
			else return visitor.visitChildren(this);
		}
	}

	public final InteracaoContext interacao() throws RecognitionException {
		InteracaoContext _localctx = new InteracaoContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_interacao);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(139);
			match(NUM);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TempoContext extends ParserRuleContext {
		public TerminalNode LONG() { return getToken(AprendizagemParser.LONG, 0); }
		public TerminalNode MEDIUM() { return getToken(AprendizagemParser.MEDIUM, 0); }
		public TerminalNode SHORT() { return getToken(AprendizagemParser.SHORT, 0); }
		public TempoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_tempo; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AprendizagemListener ) ((AprendizagemListener)listener).enterTempo(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AprendizagemListener ) ((AprendizagemListener)listener).exitTempo(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AprendizagemVisitor ) return ((AprendizagemVisitor<? extends T>)visitor).visitTempo(this);
			else return visitor.visitChildren(this);
		}
	}
